--- a/ff-wacReader/manifest.json
+++ b/ff-wacReader/manifest.json
@@ -7,7 +7,8 @@
   "description": "Reformats WAC and RCW on leg.wa.gov for easier reading.",
 
   "icons": {
-    "48": "icons/border-48.png"
+    "48": "icons/noun-book.svg"
+    "96": "icons/noun-book.svg"
   },
 
   "content_scripts": [
