fixed an issue with manifest.json that stopped the addon from loading.  created a package for addons.mozilla.org with supporting icon and screenshot.

--- a/ff-wacReader/manifest.json
+++ b/ff-wacReader/manifest.json
@@ -7,7 +7,7 @@
   "description": "Reformats WAC and RCW on leg.wa.gov for easier reading.",
 
   "icons": {
-    "48": "icons/noun-book.svg"
+    "48": "icons/noun-book.svg",
     "96": "icons/noun-book.svg"
   },
 
